Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8672

Fix libwine build on ARM

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • None

    Description

      For some reason, IntelliSense sees FiberData, but cl doesn't. Add #ifdef NONAMELESSUNION to fix this issue.

      A lot of binaries are linked against libwine which include msvcrt.dll. Fixing both of them should dramatically improve the ARM buildability

      Attachments

        Activity

          People

            ThePhysicist Timo Kreuzer
            Yuntian Zhang Yuntian Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: